--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 body {
     margin: 0;
     background-color: #eeeeee;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
@@ -275,5 +276,13 @@ button:active {
     .zoo-map {
         width: 250px;
         height: 250px;
+    }
+
+    .animal-image {
+        width: 250px;
+    }
+
+    .resturant > img {
+        width: 250px;
     }
 }
