--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     background-color: #eeeeee;
     font-family: Arial, Helvetica, sans-serif;
+    max-width: 100vw;
 }
 
 header {
@@ -279,10 +280,10 @@ button:active {
     }
 
     .animal-image {
-        width: 250px;
+        width: 50%;
     }
 
     .resturant > img {
-        width: 250px;
+        width: 50%;
     }
 }
